Fixed widths, centered content. Gonna work on otpimizing for larger screens. Will need to fix images; right now it's distorting the image because I set a width of 90% even though I put height to auto.

--- a/scss/partials/layout.scss
+++ b/scss/partials/layout.scss
@@ -1,9 +1,14 @@
 body{
 	background-color: pink;
+	display: flex;
+	flex-flow: column wrap;
+	justify-content: center;
+	align-content: center;
 }
 
 #header{
 	background-color: green;
+	flex: 0 0 auto;
 	display: flex;
 	flex-flow: row-wrap;
 	justify-content: center;
@@ -20,52 +25,84 @@ body{
 
 #left{
 	background-color: white;
+	flex: 0 0 auto;
 	display: flex;
 	flex-flow: column nowrap;
-	justify-content: flex-start;
+	justify-content: center;
 
+	//dropdown for title selection
 	#postTitle{
 		background-color: purple;
+
+		//flex for child of #left
 		flex: 0 0 auto;
 		order: 1;
-		width: 10%;
+
+		width: 90%;
+		align-self: center;
 	}
 
+	//dropdown for content selection
 	#postContent{
 		background-color: yellow;
+
+		//flex for child of #left
+		justify-content: center;
 		flex: 0 0 auto;
 		order: 2;
-		width: 10%;
+
+		width: 90%;
+		align-self: center;
 	}
 
 	#generate{
 		background-color: lime;
 		flex: 0 0 auto;
 		order: 3;
-		width: 10%;
+
+		width: 90%;
+		align-self: center;
 	}
 }
 
 #content{
 	background-color: blue;
+	flex: 0 0 auto;
+	align-self: center;
 	display: flex;
-	flex-flow: column nowrap;
-	justify-content: flex-end;
+	flex-flow: row wrap;
+	justify-content: center;
+	width: 90%;
 
 	#title{
 		background-color: red;
+
+		//flex for child of #content
+		flex: 0 0 90%;
+		order: 1;
+
+		text-align: center;
 	}
 
 	#img{
-		background-color: orange;
+		flex: 0 0 auto;
+		order: 2;
+		align-content: center;
 
+		width: 90%;
+		height: auto;
 	}
 
 	#author{
 		background-color: brown;
+		flex: 0 0 90%;
+		order: 3;
+
 	}
 
 	#comments{
 		background-color: orange;
+		flex: 0 0 90%;
+		order: 4;
 	}
 }
